# cc-plugin-og

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
cc_plugin_og/: __init__.py  checker.py
cc_plugin_og/tests/: resources.py  test_basicchecks.py
cc_plugin_og/tests/data/: bad_variable.cdl  good_dataset.cdl
