[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools_scm",
  "wheel",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project]
name = "cc-plugin-og"
description = "Open Glider plugin for the IOOS Compliance Checker Plugin"
license = {text = "Apache-2.0"}
maintainers = [
    {name = "Rob Cermak", email="jcerma@uw.edu"},
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "dependencies",
  "version",
]
[project.urls]
documentation = "http://ioos.github.io/compliance-checker/"
homepage = "https://github.com/ioos/cc-plugin-og"
repository = "https://github.com/ioos/cc-plugin-og"
[project.entry-points."compliance_checker.suites"]
"og" = "cc_plugin_og.checker:OGChecker"
[tool.setuptools]
packages = ["cc_plugin_og"]
include-package-data = true
license-files = ["LICENSE.txt"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools_scm]
write_to = "cc_plugin_og/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.ruff]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "F", # flakes
    "I", # import sorting
    "T20", # flake8-print
    "UP", # upgrade
]
target-version = "py38"
line-length = 79

[tool.pytest.ini_options]
filterwarnings = [
    "error:::cc-plugin-og.*",
    "ignore::UserWarning",
    "ignore::RuntimeWarning",
]

[tool.check-manifest]
ignore = [
    "*.yml",
    ".coveragerc",
    "Makefile",
    "docs",
    "docs/*",
    "notebooks",
    "notebooks/*",
    "tests",
    "tests/*",
]
